# cmake-template

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh
src/c/: cmake_template_version.h.in  main.c
src/c/math/: CMakeLists.txt  add.c  minus.c
src/c/nn/: nn.c
test/c/: test_add.c  test_minus.c
